# mycobot-sim2real

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: MASTER.md  architecture.md  hardware.md  plan.md  repo_structure.md  roadmap.md
logs/bench_oakd/: oakd_rates_20260321T213353Z.csv  oakd_rates_20260321T213353Z.json
ros2_ws/src/mycobot_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/mycobot_bridge/mycobot_bridge/: bridge_node.py
ros2_ws/src/mycobot_logger/: logger_node.py  package.xml  setup.cfg  setup.py
scripts/: bench_oakd_rates.py  startup_check.py  startup_oakd.py
