<?xml version="1.0"?>
<package format="3">
  <name>mycobot_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 bridge stub for myCobot sim2real: policy -> command topics (safe placeholder).</description>
  <maintainer email="villy.byun@gmail.com">Billy Byun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

